--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <outputDirectory>C:\pracovná plocha\FOLDERS\1st - Minecraft\PLTesting 1.18.1\plugins</outputDirectory>
+                            <outputFile>C:\pracovná plocha\FOLDERS\1st - Minecraft\PLTesting 1.18.1\plugins\DarkBits.jar</outputFile>
                         </configuration>
                     </execution>
                 </executions>
